add verification and refactoring
